feat: NPC tracking via Combatant interface + dev FAQ
Adds a "Track NPCs (testing)" config toggle so combat/hitsplat detection can
be exercised without a second player. Built on a new Combatant interface that
abstracts RuneLite's Player and NPC behind one mockable type:

- combatant/: Combatant (interface), PlayerCombatant, NpcCombatant, Combatants
  factory (sole instanceof site), CombatEventFactory (pure Combatant->AttackEvent).
- NPCs return blank for fields they lack (overhead prayer = null); AttackEvent
  omits the "on <prayer>" clause when null.
- Plugin handlers rewired to program against Combatant; isTracked covers
  players (trackOpponents/local) and NPCs (trackNpcs, default off).
- Mockito 5 test dep + CombatEventFactoryTest (mock(Combatant.class)). 10 tests green.

Docs: new docs/dev-faq.md (incl. the Jagex-account dev-login confusion, the
double-load fix, NPC testing, logs). Updated design doc, PROJECT, README,
combatant/CONTEXT.md, session S002, backlog-history, latest_session bumps.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>